--- a/web-nodejs/views/index.html
+++ b/web-nodejs/views/index.html
@@ -6,7 +6,7 @@
     <title>Red Hat CoolStore Microservices App</title>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/bower_components/angular/angular.min.js"></script>
+    <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 
